2010-03-24  Robby Stephenson  <robby@periapsis.org>

	* Control characters are now stripped from all text files on import (BUG: 231302).

2010-03-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed selection bug when duplicating an entry (BUG: 231125).

2010-03-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash in exporting HTML for collections with no grouping field (BUG: 231302).
	* Fixed bug that showed info dialog multiple times when changing image location.

2010-02-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash in CSV importer.

2010-02-21  Robby Stephenson  <robby@periapsis.org>

	* Tweaked entry ID values to start at 1 instead of 0.

2010-02-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.2.

2010-02-06  Robby Stephenson  <robby@periapsis.org>

	* Enabled Korganizer integration for tracking loans.

2010-01-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed some hyphenation problems when typing 978 ISBN values.
	* Enabled KAddressBook integration for borrowers.

2010-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug in en_GB translation that affected file selection.

2010-01-13  Robby Stephenson  <robby@periapsis.org>

	* Enabled filter dialog to apply empty filter.

2010-01-03  Robby Stephenson  <robby@periapsis.org>

	* Improved performance for modifying many entries at once.

2010-01-01  Robby Stephenson  <robby@periapsis.org>

	* Added Giant Bomb data source.

2009-12-31  Robby Stephenson  <robby@periapsis.org>

	* Fixed adding "link-only" files (BUG #220645).
	* Fixed Discogs track download and title search.

2009-12-22  Robby Stephenson  <robby@periapsis.org>

	* Updated CrossRef data source to allow authentication via email address.
	* Updated Crossref data source for new schema.

2009-12-19  Robby Stephenson  <robby@periapsis.org>

	* Added MusicBrainz data source.

2009-12-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed setting correct permissions of backup file (BUG #219259).