@@ -109,9 +109,9 @@ IF( KDEPIMLIBS_FOUND )
   TARGET_LINK_LIBRARIES(tellico ${KDEPIMLIBS_KABC_LIBS} ${KDEPIMLIBS_KCAL_LIBS})
 ENDIF( KDEPIMLIBS_FOUND )
 
-IF( KCDDB_FOUND )
-  TARGET_LINK_LIBRARIES(tellico ${KCDDB_LIBRARIES})
-ENDIF( KCDDB_FOUND)
+IF( KDEMULTIMEDIA_FOUND )
+  TARGET_LINK_LIBRARIES(tellico ${KCDDB_LIBRARY})
+ENDIF( KDEMULTIMEDIA_FOUND)
 
 IF( POPPLER_QT4_FOUND )
   TARGET_LINK_LIBRARIES(tellico ${POPPLER_QT4_LIBRARIES})
